Add start date header and delete created file
